--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 
 
 
-@media (max-width: 1200pxi)
+@media (max-width: 1200px)
 {
     .resp1
     {
-        transform: scale(0.6);
+        transform: scale(0.6)
     }
 }
 
